# analyzer-cli

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GitVersion.yml  README.md  SECURITY.md  SUPPORT.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: release-manager.md  rust-cli-maintainer.md  security-reviewer.md
.github/hooks/: README.md
.github/instructions/: docs.instructions.md  rust.instructions.md  workflows.instructions.md
.github/mcp/: README.md
.github/prompts/: release-readiness.prompt.md  rust-hardening.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  versioning.yml
containers/devcontainer/: Dockerfile  post-create.sh
containers/release/: Dockerfile  run-release.sh
containers/test/: Dockerfile  run-tests.sh
docs/: api-reference.md
scripts/: README.md
scripts/linux/: build  release  setup-dev  test
scripts/macos/: build  release  setup-dev  test
scripts/windows/: build.ps1  release.ps1  test.ps1
src/: config.rs  i18n.rs  lib.rs  main.rs  output.rs
src/client/: mod.rs  models.rs
src/commands/: auth.rs  config.rs  mod.rs  object.rs  scan.rs
tests/: e2e.rs  integration.rs  unit.rs
tests/common/: mod.rs
tests/e2e/: cli_smoke.rs
tests/integration/: config_commands.rs
tests/unit/: config_resolution.rs  (+1 more)
(+16 files in other folders)
