[package]
name = "analyzer-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for Exein Analyzer - firmware and container security scanning"
license = "Apache-2.0"
repository = "https://github.com/exein-io/analyzer-cli"
homepage = "https://analyzer.exein.io"
keywords = ["security", "firmware", "scanner", "cli", "sbom"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color", "help", "usage", "error-context", "suggestions", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3"
console = "0.15"
indicatif = "0.17"
owo-colors = "4"
toml = "0.8"
dirs = "6"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
humantime = "2"
bytes = "1"
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
